--- a/blog/2021-12-27-Personal-Vision.mdx
+++ b/blog/2021-12-27-Personal-Vision.mdx
@@ -11,7 +11,7 @@ After ~8 years working at Meta and ~15 years professionally programming post col
 
 ## Vision 1
 
-Create software to help people think more deeply.
+> **Create software to help people think more deeply.**
 
 ### Strategy
 
@@ -28,7 +28,7 @@ To converge organic knowledge capture with formal methods of encoding throught p
 
 ## Vision 2
 
-Make p2p & e2ee software as simple to develop as traditional client/server software.
+> **Make p2p & e2ee software as simple to develop as traditional client/server software.**
 
 ### Why?
 
@@ -36,7 +36,8 @@ Dissolve central power and control to:
 
 1. Make the web censorship proof
 2. Destroy winner take all markets
-3. Elevate pay by increasing competition in every market
+3. Elevate pay by increasing competition in every digital market
+4. Eliminate central gate-keepers
 
 ### Strategy
 
@@ -44,7 +45,7 @@ Develop [Aphrodite](https://github.com/tantaman/aphrodite) with p2p, e2ee, p2p p
 
 ## Vision 3
 
-Software developed for the Government (by or for) is public software and thus should be open source.
+> **Software developed for the Government (by or for) is public software and thus should be open source.**
 
 ### Why?
 
@@ -53,3 +54,7 @@ Cost reduction. Maintenance. More transparent governance.
 ### Strategy
 
 Lead by example. Acquire contracts and develop the solutions as open source software.
+
+## Vision 4
+
+> **Buy an island and start my own nation.**
