--- a/blog/2021-02-07-volatility-isnt-risk.mdx
+++ b/blog/2021-02-07-volatility-isnt-risk.mdx
@@ -10,6 +10,7 @@ image: /assets/posts/volatility-is-not-risk/cover.svg
 import Figure from '@site/src/components/Figure';
 import Volatile from '@site/static/blog-assets/volatility-is-not-risk/volatile.svg';
 import PeakTrough from '@site/static/blog-assets/volatility-is-not-risk/peak-trough.svg';
+import '@site/static/blog-assets/volatility-is-not-risk/style.css';
 
 The biggest lie in investing is that volatiliy = risk.
 
