--- a/blog/2021-01-26-regression-mean-vs-gambler.mdx
+++ b/blog/2021-01-26-regression-mean-vs-gambler.mdx
@@ -4,10 +4,10 @@ title: "Regression to the Mean & the Gambler's Fallacy - Simulated"
 tags: [math, demo]
 customjs:
   - /assets/posts/regression-mean-vs-gambler.js
-css:
-  - /assets/posts/regression-mean-vs-gambler.css
 image: /assets/posts/gambler-vs-mean.svg
 ---
+
+import '@site/static/blog-assets/regression-mean-vs-gambler.css';
 
 [Jump to the simulation](#simulating-both-findings)
 
@@ -38,14 +38,14 @@ In the second, we hear that the past doesn't influence the future for independen
 
 Googling "Regression to the Mean vs Gambler's Fallacy" brings up a number of times where people have become confused over these two findings:
 
-* [stats.stackexchange - Regression to the mean vs gambler's fallacy](https://stats.stackexchange.com/questions/204397/regression-to-the-mean-vs-gamblers-fallacy)
-* [math.stackexchange - Regression towards the mean v/s the Gambler's fallacy](https://math.stackexchange.com/questions/433492/regression-towards-the-mean-v-s-the-gamblers-fallacy)
-* [quora - What's the difference between regression to the mean and the gambler's fallacy?](https://www.quora.com/Whats-the-difference-between-regression-to-the-mean-and-the-gamblers-fallacy)
-* [r/askscience - Do the Gamblers Fallacy and regression toward the mean contradict each other?](https://www.reddit.com/r/askscience/comments/340ulx/do_the_gamblers_fallacy_and_regression_toward_the/)
-* [financial wisdom - Coin Tossing ... and Reversion to the Mean](https://www.financialwisdomforum.org/gummy-stuff/coin-tossing.htm)
-* [medium - Gambler’s fallacy & Regression towards the means](https://medium.com/@sundaykuloksun/gamblers-fallacy-regression-towards-the-means-ae538ace8318)
+- [stats.stackexchange - Regression to the mean vs gambler's fallacy](https://stats.stackexchange.com/questions/204397/regression-to-the-mean-vs-gamblers-fallacy)
+- [math.stackexchange - Regression towards the mean v/s the Gambler's fallacy](https://math.stackexchange.com/questions/433492/regression-towards-the-mean-v-s-the-gamblers-fallacy)
+- [quora - What's the difference between regression to the mean and the gambler's fallacy?](https://www.quora.com/Whats-the-difference-between-regression-to-the-mean-and-the-gamblers-fallacy)
+- [r/askscience - Do the Gamblers Fallacy and regression toward the mean contradict each other?](https://www.reddit.com/r/askscience/comments/340ulx/do_the_gamblers_fallacy_and_regression_toward_the/)
+- [financial wisdom - Coin Tossing ... and Reversion to the Mean](https://www.financialwisdomforum.org/gummy-stuff/coin-tossing.htm)
+- [medium - Gambler’s fallacy & Regression towards the means](https://medium.com/@sundaykuloksun/gamblers-fallacy-regression-towards-the-means-ae538ace8318)
 
-I find the [medium article]([medium](https://medium.com/@sundaykuloksun/gamblers-fallacy-regression-towards-the-means-ae538ace8318)) by Ku Lok Sun the most succint and accessible explination of the difference between the two, but none of the sources above provide a simulation of the phenomenon.
+I find the [medium article](<[medium](https://medium.com/@sundaykuloksun/gamblers-fallacy-regression-towards-the-means-ae538ace8318)>) by Ku Lok Sun the most succint and accessible explination of the difference between the two, but none of the sources above provide a simulation of the phenomenon.
 
 # Simulating both findings
 
@@ -53,7 +53,8 @@ To get a practical sense that the findings are in fact not contradictory, lets p
 
 First we'll flip <i data-bind="num_coins"></i> coins and plot the results.
 
-<span class="coin side-H"></span> will repersent heads.<br/>
+<span class="coin side-H"></span> will repersent heads.
+<br />
 <span class="coin side-T"></span> will represent tails.
 
 <div class="coin-chart" data-bind="coin_chart"></div>
@@ -80,25 +81,31 @@ We're interseted in (3) so we can verify that a series of flips immediately afte
     <tr>
       <td>Streak</td>
       <td>Next Flip</td>
-      <td>Next <i data-bind="run_length"></i> Flips</td>
-      <td><i data-bind="run_length"></i> Flips Sum</td>
+      <td>
+        Next <i data-bind="run_length"></i> Flips
+      </td>
+      <td>
+        <i data-bind="run_length"></i> Flips Sum
+      </td>
     </tr>
   </thead>
-  <tbody data-bind="run_list">
-  </tbody>
+  <tbody data-bind="run_list"></tbody>
   <tfoot>
     <tr>
-      <td><i data-bind="num_runs"></i> Streaks</td>
+      <td>
+        <i data-bind="num_runs"></i> Streaks
+      </td>
       <td>
         <i data-bind="after_run_heads"></i> <span class="coin side-H"></span> /
         <i data-bind="after_run_tails"></i> <span class="coin side-T"></span>
       </td>
       <td>
-        <i data-bind="seq_after_run_heads"></i> <span class="coin side-H"></span> /
-        <i data-bind="seq_after_run_tails"></i> <span class="coin side-T"></span>
+        <i data-bind="seq_after_run_heads"></i> <span class="coin side-H"></span>{' '}
+        /<i data-bind="seq_after_run_tails"></i> <span class="coin side-T"></span>
       </td>
       <td>
-        <i data-bind="num_seq_closer_to_mean"></i> of <i data-bind="num_runs"></i> Closer to mean
+        <i data-bind="num_seq_closer_to_mean"></i> of <i data-bind="num_runs"></i>{' '}
+        Closer to mean
       </td>
     </tr>
   </tfoot>
@@ -106,12 +113,11 @@ We're interseted in (3) so we can verify that a series of flips immediately afte
 
 **Gambler's Fallacy** - In the second column above, the probability of flipping heads or tails immediately after a streak is still close to 50/50. The prior streak doesn't impact the next flip.
 
-<i data-bind="after_run_heads"></i> / <i data-bind="num_runs"></i> * 100 =
-<i data-bind="after_run_heads_pct"></i>% <span class="coin side-H"></span>
-<br/>
-<i data-bind="after_run_tails"></i> / <i data-bind="num_runs"></i> * 100 =
-<i data-bind="after_run_tails_pct"></i>% <span class="coin side-T"></span>
-
+<i data-bind="after_run_heads"></i> / <i data-bind="num_runs"></i> * 100 =<i data-bind="after_run_heads_pct"></i>
+% <span class="coin side-H"></span>
+<br />
+<i data-bind="after_run_tails"></i> / <i data-bind="num_runs"></i> * 100 =<i data-bind="after_run_tails_pct"></i>
+% <span class="coin side-T"></span>
 
 Note: refreshing this page re-runs the coinflips if you want to run the test multiple times.
 
@@ -120,7 +126,8 @@ Note: refreshing this page re-runs the coinflips if you want to run the test mul
 This confirms regression to the mean: after seeing an outlier the next measurement is more likely to be closer to the mean.
 
 <i data-bind="num_seq_closer_to_mean"></i> / <i data-bind="num_runs"></i> * 100 =
-**<i data-bind="num_seq_closer_to_mean_pct"></i>%** of runs are **closer to the mean.**
+**<i data-bind="num_seq_closer_to_mean_pct"></i>%** of runs are **closer to the
+mean.**
 
 But we're taking into consideration both heads streaks and tails streaks. Could they by evening one another out?
 
@@ -133,25 +140,31 @@ To be sure, let's re-do the analysis above but for streaks of heads only.
     <tr>
       <td>Streak</td>
       <td>Next Flip</td>
-      <td><i data-bind="run_length"></i> Flips After</td>
-      <td><i data-bind="run_length"></i> Flips Sum</td>
+      <td>
+        <i data-bind="run_length"></i> Flips After
+      </td>
+      <td>
+        <i data-bind="run_length"></i> Flips Sum
+      </td>
     </tr>
   </thead>
-  <tbody data-bind="heads_run_list">
-  </tbody>
+  <tbody data-bind="heads_run_list"></tbody>
   <tfoot>
     <tr>
-      <td><i data-bind="heads_num_runs"></i> Streaks</td>
       <td>
-        <i data-bind="heads_after_run_heads"></i> <span class="coin side-H"></span> /
-        <i data-bind="heads_after_run_tails"></i> <span class="coin side-T"></span>
+        <i data-bind="heads_num_runs"></i> Streaks
       </td>
       <td>
-        <i data-bind="heads_seq_after_run_heads"></i> <span class="coin side-H"></span> /
-        <i data-bind="heads_seq_after_run_tails"></i> <span class="coin side-T"></span>
+        <i data-bind="heads_after_run_heads"></i> <span class="coin side-H"></span>{' '}
+        /<i data-bind="heads_after_run_tails"></i> <span class="coin side-T"></span>
       </td>
       <td>
-        <i data-bind="heads_num_seq_closer_to_mean"></i> of <i data-bind="heads_num_runs"></i> Closer to mean
+        <i data-bind="heads_seq_after_run_heads"></i> <span class="coin side-H"></span>{' '}
+        /<i data-bind="heads_seq_after_run_tails"></i> <span class="coin side-T"></span>
+      </td>
+      <td>
+        <i data-bind="heads_num_seq_closer_to_mean"></i> of <i data-bind="heads_num_runs"></i>{' '}
+        Closer to mean
       </td>
     </tr>
   </tfoot>
@@ -159,16 +172,17 @@ To be sure, let's re-do the analysis above but for streaks of heads only.
 
 **Gambler's Fallacy:**
 
-<i data-bind="heads_after_run_heads"></i> / <i data-bind="heads_num_runs"></i> * 100 =
-<i data-bind="heads_after_run_heads_pct"></i>% <span class="coin side-H"></span>
-<br/>
-<i data-bind="heads_after_run_tails"></i> / <i data-bind="heads_num_runs"></i> * 100 =
-<i data-bind="heads_after_run_tails_pct"></i>% <span class="coin side-T"></span>
+<i data-bind="heads_after_run_heads"></i> / <i data-bind="heads_num_runs"></i> *
+100 =<i data-bind="heads_after_run_heads_pct"></i>% <span class="coin side-H"></span>
+<br />
+<i data-bind="heads_after_run_tails"></i> / <i data-bind="heads_num_runs"></i> *
+100 =<i data-bind="heads_after_run_tails_pct"></i>% <span class="coin side-T"></span>
 
 **Regression to the Mean:**
 
-<i data-bind="heads_num_seq_closer_to_mean"></i> / <i data-bind="heads_num_runs"></i> * 100 =
-**<i data-bind="heads_num_seq_closer_to_mean_pct"></i>%** of runs are **closer to the mean.**
+<i data-bind="heads_num_seq_closer_to_mean"></i> / <i data-bind="heads_num_runs"></i> *
+100 = **<i data-bind="heads_num_seq_closer_to_mean_pct"></i>%** of runs are
+**closer to the mean.**
 
 These findings corroborate our original findings.
 
@@ -181,6 +195,7 @@ Since every flip is 50/50, a streak of heads or tails is a deviation from the me
 Regression to the mean, rather than being contrary to the gambler's fallacy, is really a restatement of it. A sequence of random events will always tend towards the mean. The chance of getting heads or tails on any given flip is the mean.
 
 Demo source:
-* [js](https://github.com/tantaman/tantaman.github.io/blob/master/assets/posts/regression-mean-vs-gambler.js)
-* [css](https://github.com/tantaman/tantaman.github.io/blob/master/assets/posts/regression-mean-vs-gambler.css)
-* [markdown/html](https://github.com/tantaman/tantaman.github.io/blob/master/_posts/2021-01-26-regression-mean-vs-gambler.markdown)
+
+- [js](https://github.com/tantaman/tantaman.github.io/blob/master/assets/posts/regression-mean-vs-gambler.js)
+- [css](https://github.com/tantaman/tantaman.github.io/blob/master/assets/posts/regression-mean-vs-gambler.css)
+- [markdown/html](https://github.com/tantaman/tantaman.github.io/blob/master/_posts/2021-01-26-regression-mean-vs-gambler.markdown)
