fixup image imports

--- a/site/blog/2021-01-21-false-positive-rate.mdx
+++ b/site/blog/2021-01-21-false-positive-rate.mdx
@@ -5,9 +5,9 @@ tags: [math, demo]
 customjs:
   - /assets/posts/false-positive-rate.js
 image: /assets/posts/understanding-fp-rate.svg
+css:
+  - ../static/blog-assets/false-positive-rate.css
 ---
-
-import '../static/blog-assets/false-positive-rate.css';
 
 [Jump to the simulation](#prior-probability)
 
