--- a/site/blog/2021-01-26-regression-mean-vs-gambler.mdx
+++ b/site/blog/2021-01-26-regression-mean-vs-gambler.mdx
@@ -5,9 +5,9 @@ tags: [math, demo]
 customjs:
   - /assets/posts/regression-mean-vs-gambler.js
 image: /assets/posts/gambler-vs-mean.svg
+css:
+  - ../static/blog-assets/regression-mean-vs-gambler.css
 ---
-
-import '../static/blog-assets/regression-mean-vs-gambler.css';
 
 [Jump to the simulation](#simulating-both-findings)
 
