--- a/site/blog/2021-02-08-reactive-markdown.mdx
+++ b/site/blog/2021-02-08-reactive-markdown.mdx
@@ -5,10 +5,9 @@ tags: [software-engineering, demo]
 jsmodules:
   - /assets/posts/reactive-markdown/main.js
 image: /assets/posts/reactive-markdown/cover.svg
+css:
+  - ../static/blog-assets/reactive-markdown/main.css
 ---
-
-import '../static/blog-assets/reactive-markdown/main.css';
-import InfraInvest from '../static/blog-assets/reactive-markdown/infra-invest.svg';
 
 ## DEPRECATED -- moved to mdx.
 
@@ -75,7 +74,7 @@ Given I'll be writing lots of blog posts, and thus spending lots of time writing
 
 **Side note -** investing in software infrastructure is an optimization problem. Under ideal circumstances: the more you invest in infra, the faster the work on top of it goes. If there is a limited amount of work to be done on top of that infra, however, the infra investment should be bounded. Once infra is "good enough", continued investments start producing diminishing returns (unless there is a paradigm shift. A post for another day.).
 
-<InfraInvest style={{ width: 600, height: 400 }} />
+<img src="./blog-assets/reactive-markdown/infra-invest.svg" />
 
 ## Reactive Markdown
 
