--- a/site/blog/2021-02-12-Todo-MVC.mdx
+++ b/site/blog/2021-02-12-Todo-MVC.mdx
@@ -4,10 +4,10 @@ title: 'The Shortest, Framework Free, TODO App'
 tags: [software-engineering, demo]
 customjs:
   - /assets/posts/todo-mvc/todomvc.js
+css:
+  - ../static/blog-assets/todo-mvc/base.css
+  - ../static/blog-assets/todo-mvc/todo.css
 ---
-
-import '../static/blog-assets/todo-mvc/base.css';
-import '../static/blog-assets/todo-mvc/todo.css';
 
 **A TodoMVC App in ~200 lines of plain JavaScript and 0 dependencies.**
 
