--- a/site/blog/2021-12-17-Object-Identity.mdx
+++ b/site/blog/2021-12-17-Object-Identity.mdx
@@ -5,9 +5,6 @@ tags: [software-engineering, framework]
 ---
 
 import Figure from '../components/Figure';
-import shipoftheseus from '../static/blog-assets/identity-software/shipoftheseus.jpg';
-import reference from '../static/blog-assets/identity-software/reference.png';
-import immutable from '../static/blog-assets/identity-software/immutable.png';
 
 In programming we're met with things that are completely new. Even though they're new, they're familiar enough to grasp with existing concepts. This converting the new to something familiar helps us to understand things at one level but if the familiar does not perfectly match the new then it causes us to fail to understand at another level.
 
@@ -21,7 +18,10 @@ But first, what is identity?
 
 # Identity
 
-<Figure url={shipoftheseus} description="Ship of Theseus" />
+<Figure
+  url="./blog-assets/identity-software/shipoftheseus.jpg"
+  description="Ship of Theseus"
+/>
 
 The problem of identity has been with us since at least 500 B.C. where it was discussed in the thought experiement the [Ship of Theseus](https://en.wikipedia.org/wiki/Ship_of_Theseus).
 
@@ -51,14 +51,14 @@ So is reference quality nominal or physical identity or neither?
 Reference equality looks a lot like nominal identity. A reference points to something as does a name. If the thing pointed to changes over time, the reference still holds just like nominal identity.
 
 <Figure
-  url={reference}
+  url="./blog-assets/identity-software/reference.png"
   description="Reference Equality Providing Nominal Identity"
 />
 
 Reference equality being the same as nominal identity breaks down as soon as you intorduce immutability. Once an object is immutable, there's no longer a way to capture the nominal identity of that object via a reference. This is the case since every time you change the object you must create a new one so the reference is always new. Immutable objects are thus left with only having a physical, and no nominal, identity.
 
 <Figure
-  url={immutable}
+  url="./blog-assets/identity-software/immutable.png"
   description="Reference Equality Losing Nominal Identity"
 />
 
