--- a/site/blog/2021-12-27-Personal-Vision.mdx
+++ b/site/blog/2021-12-27-Personal-Vision.mdx
@@ -5,7 +5,6 @@ tags: [vision]
 ---
 
 import Figure from '../components/Figure';
-import converge from '../static/blog-assets/vision/converge.png';
 
 After ~8 years working at Meta and ~15 years professionally programming post college, I'm departing the workforce to puruse my own ideas full time.
 
@@ -24,7 +23,7 @@ Two prongs:
 
 To converge organic knowledge capture with formal methods of encoding throught processes.
 
-<Figure url={converge} />
+<Figure url="./blog-assets/vision/converge.png" />
 
 ## Vision 2
 
