--- a/site/blog/2013-07-30-Inheritance-Aggregation-and-Pipelines.mdx
+++ b/site/blog/2013-07-30-Inheritance-Aggregation-and-Pipelines.mdx
@@ -5,13 +5,6 @@ tags: [software-engineering]
 ---
 
 import Figure from '../components/Figure';
-import aggregateReplacements from '../static/blog-assets/inheritance-aggregation-pipelines/aggregates-replacements.png';
-import journaling from '../static/blog-assets/inheritance-aggregation-pipelines/journaling.png';
-import lruMru from '../static/blog-assets/inheritance-aggregation-pipelines/lru-mru.png';
-import pipelineContext from '../static/blog-assets/inheritance-aggregation-pipelines/pipeline-context.png';
-import pipeline from '../static/blog-assets/inheritance-aggregation-pipelines/pipeline.png';
-import resourceLruCached from '../static/blog-assets/inheritance-aggregation-pipelines/resource-lru-cached.png';
-import resourceProvider from '../static/blog-assets/inheritance-aggregation-pipelines/resource-provider.png';
 
 How does one write software that can be extended?
 
@@ -20,20 +13,23 @@ I think many developer’s first instinct is to set up some form of inheritance 
 Take a set of classes that provide access to resources at various URIs as an example. The base class just provides get/put/delete operations.
 
 <Figure
-  url={resourceProvider}
+  url="./blog-assets/inheritance-aggregation-pipelines/resource-provider.png"
   description="base resource provider. get/put/delete resources at different URIs"
 />
 
 Later, someone wants to add some sort of caching to this. Their first instinct is to extend the functionality via inheritance. So now you have something that looks like the following.
 
 <Figure
-  url={resourceLruCached}
+  url="./blog-assets/inheritance-aggregation-pipelines/resource-lru-cached.png"
   description="ResourceProvider extended to add caching"
 />
 
 But someone else in the organization may have a use case where LRU caching doesn’t work well so they add a new extension.
 
-<Figure url={lruMru} description="Two different caching algorithms" />
+<Figure
+  url="./blog-assets/inheritance-aggregation-pipelines/lru-mru.png"
+  description="Two different caching algorithms"
+/>
 
 and finally a requirement is added that accesses to certain resource provider instances need to be journaled. So where do you put the journaling class in the hierarchy? You could inherit directly from **ResourceProvider** but then should you update the cache implementations to inherit from the journaling class? What about the use cases that need caching but not journaling? Or journaling and not caching? Inheritance has forced you into an awkward situation where you can’t perfectly capture any of the relationships you need.
 
@@ -48,7 +44,7 @@ A solution that depends on aggregation would differ in that instead of each clas
 If you want to make a Journaling, LRU cached resource provider then you instantiate those three classes and have them contain one another. Here is a class diagram to illustrate a Journaling, LRU cached resource provider:
 
 <Figure
-  url={journaling}
+  url="./blog-assets/inheritance-aggregation-pipelines/journaling.png"
   description="Instead of inheriting, everyone implements a common interface and then holds an instance of that interface."
 />
 
@@ -63,7 +59,7 @@ Of course aggregation has its limitations as well. In the prior example, if you 
 More generally, adding and removing delegates in the middle of the chain of aggregations is difficult. You have to touch the objects on either side of what is being added, removed or replaced.
 
 <Figure
-  url={aggregateReplacements}
+  url="./blog-assets/inheritance-aggregation-pipelines/aggregates-replacements.png"
   description="Aggregate1's link needs to be updated to refer to Replacement. Aggregate2 needs to expose its link so Replacement can refer to Aggregate3."
 />
 
@@ -76,7 +72,7 @@ Pipelines are the alternative abstraction that will help us resolve all of the d
 Continuing our resource provider example, all of the instances of **IResourceProvider** that we want to chain together will now be held by a **Pipeline** class.
 
 <Figure
-  url={pipeline}
+  url="./blog-assets/inheritance-aggregation-pipelines/pipeline.png"
   description="The Pipeline holds a list of IResourceProviders instead of the IResourceProviders holding one another."
 />
 
@@ -112,7 +108,7 @@ Pipelining also allows us to build more and more complex processing without ever
 The simplest pipeline just invokes a method on every handler it contains. Kind of like notifying listeners. Of course this is not always how you would like to do things so a more robust pipeline passes a “**next**” or “**context**” object to each member of the pipeline that it calls. Using the context object, members of the pipeline can choose to stop a call from continuing down the pipeline or make adjustments to the parameters of a call as it moves down the pipeline.
 
 <Figure
-  url={pipelineContext}
+  url="./blog-assets/inheritance-aggregation-pipelines/pipeline-context.png"
   description="A new interface for items in the pipeline. The Context object can be used to stop calls from moving down the pipeline among other things."
 />
 
