--- a/content/blog/2013-07-30-Inheritance-Aggregation-and-Pipelines.mdx
+++ b/content/blog/2013-07-30-Inheritance-Aggregation-and-Pipelines.mdx
@@ -11,23 +11,24 @@ How does one write software that can be extended?
 I think many developer’s first instinct is to set up some form of inheritance hierarchy. Inheritance is a step in the right direction but it is very restrictive. The problem with inheritance is that relationships between your components and their extensions are rigidly defined at compile time.
 
 Take a set of classes that provide access to resources at various URIs as an example. The base class just provides get/put/delete operations.
+z
 
 <Figure
-  url="./blog-assets/inheritance-aggregation-pipelines/resource-provider.png"
+  url="/blog-assets/inheritance-aggregation-pipelines/resource-provider.png"
   description="base resource provider. get/put/delete resources at different URIs"
 />
 
 Later, someone wants to add some sort of caching to this. Their first instinct is to extend the functionality via inheritance. So now you have something that looks like the following.
 
 <Figure
-  url="./blog-assets/inheritance-aggregation-pipelines/resource-lru-cached.png"
+  url="/blog-assets/inheritance-aggregation-pipelines/resource-lru-cached.png"
   description="ResourceProvider extended to add caching"
 />
 
 But someone else in the organization may have a use case where LRU caching doesn’t work well so they add a new extension.
 
 <Figure
-  url="./blog-assets/inheritance-aggregation-pipelines/lru-mru.png"
+  url="/blog-assets/inheritance-aggregation-pipelines/lru-mru.png"
   description="Two different caching algorithms"
 />
 
@@ -44,7 +45,7 @@ A solution that depends on aggregation would differ in that instead of each clas
 If you want to make a Journaling, LRU cached resource provider then you instantiate those three classes and have them contain one another. Here is a class diagram to illustrate a Journaling, LRU cached resource provider:
 
 <Figure
-  url="./blog-assets/inheritance-aggregation-pipelines/journaling.png"
+  url="/blog-assets/inheritance-aggregation-pipelines/journaling.png"
   description="Instead of inheriting, everyone implements a common interface and then holds an instance of that interface."
 />
 
@@ -59,7 +60,7 @@ Of course aggregation has its limitations as well. In the prior example, if you 
 More generally, adding and removing delegates in the middle of the chain of aggregations is difficult. You have to touch the objects on either side of what is being added, removed or replaced.
 
 <Figure
-  url="./blog-assets/inheritance-aggregation-pipelines/aggregates-replacements.png"
+  url="/blog-assets/inheritance-aggregation-pipelines/aggregates-replacements.png"
   description="Aggregate1's link needs to be updated to refer to Replacement. Aggregate2 needs to expose its link so Replacement can refer to Aggregate3."
 />
 
@@ -72,7 +73,7 @@ Pipelines are the alternative abstraction that will help us resolve all of the d
 Continuing our resource provider example, all of the instances of **IResourceProvider** that we want to chain together will now be held by a **Pipeline** class.
 
 <Figure
-  url="./blog-assets/inheritance-aggregation-pipelines/pipeline.png"
+  url="/blog-assets/inheritance-aggregation-pipelines/pipeline.png"
   description="The Pipeline holds a list of IResourceProviders instead of the IResourceProviders holding one another."
 />
 
@@ -108,7 +109,7 @@ Pipelining also allows us to build more and more complex processing without ever
 The simplest pipeline just invokes a method on every handler it contains. Kind of like notifying listeners. Of course this is not always how you would like to do things so a more robust pipeline passes a “**next**” or “**context**” object to each member of the pipeline that it calls. Using the context object, members of the pipeline can choose to stop a call from continuing down the pipeline or make adjustments to the parameters of a call as it moves down the pipeline.
 
 <Figure
-  url="./blog-assets/inheritance-aggregation-pipelines/pipeline-context.png"
+  url="/blog-assets/inheritance-aggregation-pipelines/pipeline-context.png"
   description="A new interface for items in the pipeline. The Context object can be used to stop calls from moving down the pipeline among other things."
 />
 
