mess around with global scripts in md files

--- a/content/blog/2021-02-12-Todo-MVC.md
+++ b/content/blog/2021-02-12-Todo-MVC.md
@@ -4,10 +4,14 @@ title: 'The Shortest, Framework Free, TODO App'
 tags: [software-engineering, demo]
 customjs:
   - /assets/posts/todo-mvc/todomvc.js
-css:
-  - ../static/blog-assets/todo-mvc/base.css
-  - ../static/blog-assets/todo-mvc/todo.css
 ---
+
+<style type="text/css">
+@import url("/blog-assets/todo-mvc/base.css");
+@import url("/blog-assets/todo-mvc/todo.css");
+</style>
+
+<script type="text/javascript" src="/blog-assets/todo-mvc/todomvc.js"></script>
 
 **A TodoMVC App in ~200 lines of plain JavaScript and 0 dependencies.**
 
