--- a/content/blog/2021-02-12-Todo-MVC.md
+++ b/content/blog/2021-02-12-Todo-MVC.md
@@ -6,20 +6,13 @@ customjs:
   - /assets/posts/todo-mvc/todomvc.js
 ---
 
-<style type="text/css">
-@import url("/blog-assets/todo-mvc/base.css");
-@import url("/blog-assets/todo-mvc/todo.css");
-</style>
-
-<script type="text/javascript" src="/blog-assets/todo-mvc/todomvc.js"></script>
-
 **A TodoMVC App in ~200 lines of plain JavaScript and 0 dependencies.**
 
 <br />
 <br />
 <br />
 
-<div id="container"></div>
+<iframe src="/blog-assets/todo-mvc/index.html" style="width: 100%; height: 600px"></iframe>
 
 Source:
 
