make todomvc standalone

--- a/content/blog/2021-02-12-Todo-MVC.md
+++ b/content/blog/2021-02-12-Todo-MVC.md
@@ -2,9 +2,15 @@
 slug: 2021-02-12-Todo-MVC
 title: 'The Shortest, Framework Free, TODO App'
 tags: [software-engineering, demo]
-customjs:
-  - /assets/posts/todo-mvc/todomvc.js
+standalone: html
 ---
+
+<style type="text/css">
+@import url("/blog-assets/todo-mvc/base.css");
+@import url("/blog-assets/todo-mvc/todo.css");
+</style>
+
+<script type="text/javascript" src="/blog-assets/todo-mvc/todomvc.js"></script>
 
 **A TodoMVC App in ~200 lines of plain JavaScript and 0 dependencies.**
 
@@ -12,7 +18,7 @@ customjs:
 <br />
 <br />
 
-<iframe src="/blog-assets/todo-mvc/index.html" style="width: 100%; height: 600px"></iframe>
+<div id="container"></div>
 
 Source:
 
