correctly configure syntax highlighting, toc?

--- a/content/blog/2013-08-15-Oh-Lisp.md
+++ b/content/blog/2013-08-15-Oh-Lisp.md
@@ -170,7 +170,7 @@ Now, when I enter the following sexpr...
 
 **XSLT:**
 
-```xslt
+```xml
 <xsl:template match="dictionary">
   <xsl:text>(dictionary</xsl:text>
   <xsl:apply-templates />
