fully write together scripts for mdx

--- a/content/blog/2013-07-30-Inheritance-Aggregation-and-Pipelines.mdx
+++ b/content/blog/2013-07-30-Inheritance-Aggregation-and-Pipelines.mdx
@@ -4,7 +4,7 @@ title: Inheritance, Aggregation, and Pipelines
 tags: [software-engineering]
 ---
 
-import Figure from '../components/Figure';
+import Figure from '/dist/components/Figure.js';
 
 How does one write software that can be extended?
 
