--- a/content/blog/2021-12-27-Personal-Vision.mdx
+++ b/content/blog/2021-12-27-Personal-Vision.mdx
@@ -4,7 +4,7 @@ title: 'Vision'
 tags: [vision]
 ---
 
-import Figure from '../components/Figure';
+import Figure from '/dist/components/Figure.js';
 
 After ~8 years working at Meta and ~15 years professionally programming post college, I'm departing the workforce to puruse my own ideas full time.
 
@@ -23,7 +23,7 @@ Two prongs:
 
 To converge organic knowledge capture with formal methods of encoding throught processes.
 
-<Figure url="./blog-assets/vision/converge.png" />
+<Figure url="/blog-assets/vision/converge.png" />
 
 ## Vision 2
 
