--- a/content/blog/2021-12-23-Deeply-Nested-Updates-React.mdx
+++ b/content/blog/2021-12-23-Deeply-Nested-Updates-React.mdx
@@ -4,7 +4,7 @@ title: 'Reacting Better - Deeply Nested Update Problem'
 tags: [software-engineering, react, framework]
 ---
 
-import Figure from '../components/Figure';
+import Figure from '/dist/components/Figure.js';
 
 Something irks me about React. It's how [inefficiently it handles deeply nested updates](https://youtu.be/AdNJ3fydeao).
 
@@ -17,7 +17,7 @@ Let's take a presentation editor (e.g., powerpoint / keynote or [strut.io](https
 The component hierarchy might look something like:
 
 <Figure
-  url="./blog-assets/deeply-nested-updates/deeply-nested.png"
+  url="/blog-assets/deeply-nested-updates/deeply-nested.png"
   description="App Components"
 />
 
@@ -103,7 +103,7 @@ If `appState` is immutable, an update to a deeply nested property like `blockSta
 We only wanted to re-render the leaves -- `BlockOptions` and `MarkdownEditor` but we ended up re-rendering the entire component graph.
 
 <Figure
-  url="./blog-assets/deeply-nested-updates/deeply-nested-re-render.png"
+  url="/blog-assets/deeply-nested-updates/deeply-nested-re-render.png"
   description="Everything in <font color='red'>red</font> re-renders, but we only needed to re-render the stuff in <font color='blue'>blue</font>"
 />
 
