--- a/content/2022-05-12-simple-mdx.mdx
+++ b/content/2022-05-12-simple-mdx.mdx
@@ -1,13 +1,13 @@
 ---
 title: Simple MDX
 tags: [software-engineering]
-js: [https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js]
 ---
 
 import { TwitterTweetEmbed } from 'https://esm.sh/react-twitter-embed';
-import { Mermaid } from '/dist/components/Mermaid.js';
 
-So you want to deploy a site that uses `MDX`? Outside of using [Nextjs](https://nextjs.org/docs/advanced-features/using-mdx), the process is much more difficult than it aught to be.
+> tldr; [skip to full sampel code](#full-sample-code)
+
+So you want to deploy a site that uses `MDX`? Outside of using [Nextjs](https://nextjs.org/docs/advanced-features/using-mdx), this process is much more difficult than it aught to be.
 
 <center>
   <TwitterTweetEmbed tweetId={'1524057494829547521'} />
@@ -17,14 +17,14 @@ Technically we don't even need to mess with `mdx-bundler` (see [Building Without
 
 > It will be interesting to see the days where we're developing entirely within documents and interlinking dozens or hundreds of docs via their exports. Where the prose is the first class citizen and the code the second. The confluence of [Notion](https://www.notion.so/)/[ObservableHQ](https://observablehq.com/)/[Jupyter](https://jupyter.org/)/[Quarto](https://quarto.org/)/[MDX](https://mdxjs.com/)/[CraftDocs](https://www.craft.do/)/[Coda](https://coda.io/)/[Obsidian](https://obsidian.md/)/[Airtable](https://www.airtable.com/) like features being brought together into a single authoring and coding paltform.
 
-## Using MDX
+## Getting Started
 
-Lets get started using `@mdx-js/mdx` directly. We'll go over a few things:
+To use `@mdx-js/mdx` directly we'll go over a few things:
 
 1. Ingesting MDX content for processing
 2. Deciding what transformations to apply
 3. Applying transforms and compiling the MDX to JavaScript
-4. Loading the component on the frontend
+4. Supplying JSX & using the component on the frontend
 
 ### Ingesting Content
 
@@ -43,22 +43,80 @@ await Promise.all(files.map(async (file) => processMdx(await read(file))));
 
 We'll fill in the details of `processMdx` when we cover compiling mdx to js.
 
-### Picking transformations
+### Picking Transformations
 
-`MDX` is based on `Remark`, `Rehype` and the `Unifiedjs` ecosystem.
+`MDX` is based on `Remark`, `Rehype` and the `Unifiedjs` ecosystem. This ecosystem is comprised of a large set of plugins or transformations that you can use to control the final output of your `MDX` conversion.
 
-The root of this ecosystem is a representation of text as a syntax tree ([hast](https://github.com/syntax-tree/hast)). All `unifiedjs` processors are built around this abstraction and work by applying transofrmations to the tree, passing the updated tree along to the next step in the processing pipeline so it can apply its transofrmations and then pass the updated tree to the next step and so on.
+At a high level, plugins are chained together into a processing pipeline. The plugins that come first deal at the lowest level of abstract, enriching or transforming the data to higher levels of abstraction before passing it on to the next set of plugins in the chain (for more on pipelines in general, see [inheritance, aggregation and pipelines](/2013-07-30-Inheritance-Aggregation-and-Pipelines.html#pipelines)).
 
-For more on pipelines in general, see [inheritance, aggregation and pipelines](/2013-07-30-Inheritance-Aggregation-and-Pipelines.html#pipelines)
+> Nit: At the lowest levels (e.g., parsing and tokenizing) extensions will be combined or invoked in turn without passing data to one another. At higher levels (rehype and above) each plugin does manipulate the `AST` and pass on its results to the next plugin.
 
-A pipeline for converting `Markdown` to `html` might look something like:
+All of the various plugins that are available to you to enrich your transformation of `MDX` (or `MD` or just text in general) can [be found here](https://unifiedjs.com/explore/).
 
-<Mermaid id="example-pipe" chart={`
-graph TD;
-  remarkParse-->remarkFrontmatter
-  remarkFrontmatter-->remarkGfm
-  remarkGfm-->remarkWikiLink
-  remarkWikiLink-->remarkRehype
-  remarkRehype-->rehypeInferDescriptionMeta
-  rehypeInferDescriptionMeta-->rehypeStringify
-`} />
+Figuring out what to use may seem daunting so here are a few common packages.
+
+1. [remark-parse](https://github.com/remarkjs/remark/tree/main/packages/remark-parse) - to parse markdown. Already included by `@mdx-js/mdx`.
+2. [remark-frontmatter](https://github.com/remarkjs/remark-frontmatter) - to extract frontmatter
+3. [remark-gfm](https://github.com/remarkjs/remark-gfm) - to support github flavored markdown
+4. [remark-wiki-link](https://github.com/landakram/remark-wiki-link) - to enable wiki link syntax
+5. [remark-rehype](https://github.com/remarkjs/remark-rehype) - to convert the markdown ast to an html ast for futher processing. Already included by `@mdx-js/mdx`.
+6. [rehype-highlight](https://github.com/rehypejs/rehype-highlight) - to eanble code highlighting
+
+### Applying Transformations
+
+Applying transformations is as simple as passing their imported modules and options to `compile` from `@mdx-js/mdx`. To do that, we'll go ahead an implement the `processMdx` function that we called earlier.
+
+```javascript
+import { compile } from '@mdx-js/mdx';
+import remarkFrontmatter from 'remark-frontmatter';
+import remarkGfm from 'remark-gfm';
+import remarkWikiLink from 'remark-wiki-link';
+import rehypeInferDescriptionMeta from 'rehype-infer-description-meta';
+import rehypeAutolinkHeadings from 'rehype-autolink-headings';
+import rehypeHighlight from 'rehype-highlight';
+
+async function processMdx(file) {
+  return await compile(file, {
+    remarkPlugins: [
+      remarkFrontmatter,
+      () => (tree, file) => {
+        matter(file, { strip: true });
+      },
+      remarkGfm,
+      remarkWikiLink,
+    ],
+    rehypePlugins: [
+      [rehypeInferDescriptionMeta, { truncateSize: 255 }],
+      rehypeAutolinkHeadings,
+      rehypeHighlight,
+    ],
+  }).toString();
+}
+```
+
+### Supplying JSX & Using the Component
+
+What `processMdx` will do is to return a JavaScript module that defines a React component that represents the MDX document. What is not included in the genreated component, however, is the code for any imports you may require.
+
+One way of including React without bundling it directly with the `MDX` component (or requiring another build step after generating the component) is to supply the `jsxImportSource` option.
+
+```javascript
+async function processMdx(file) {
+  return await compile(file, {
+    jsxImportSource: 'https://esm.sh/react',
+    ...
+  });
+}
+```
+
+Any imports referenced within your component either need to be URLs that resolve to ES Modules -or- imports that can be resolved in a later build step.
+
+If you need to bundle your dependencies along with the MDX component in this phase, see [`mdx-bundler`](https://github.com/kentcdodds/mdx-bundler). `mdx-bundler` works much the same as what we've describe here except it'll use `ESBuild` to scan imports and bundle their code in with the final component. We've taken a non-bundling approach (as described [here](http://localhost:3000/2022-05-12-skipping-the-bundling)) for this article.
+
+Now how do you
+
+## Full Sample Code
+
+```javascript
+
+```
